# Cellular-Automata

./: CMakeLists.txt  README.md  build.sh
include/: Application.h  Application.hpp  Grid.h  Grid.hpp
src/: Application.cpp  Grid.cpp  main.cpp
